[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/bullet_collision/common/CommonBulletCollision.gd" type="Script" id=1]

[node name="CommonBulletCollision" type="Node2D"]
script = ExtResource( 1 )

[node name="Image1" type="Tween" parent="."]

[node name="Image2" type="Tween" parent="."]

[node name="Image3" type="Tween" parent="."]

[node name="TimeToDelete" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true
[connection signal="timeout" from="TimeToDelete" to="." method="_on_TimeToDelete_timeout"]
